2.7.1
fixed bonus weapon dmg spell
nerfed major arcana chaos stats a bit, they had too many stats.
added a new currency item that gives great chaos stats, but is rare and gives large break chance.
2.7.0

ADDED PROFESSIONS!

Professions are basically a way to craft things, but gated by your profession level. Max lvl of recipes is 100, but max profession lvl is 1000. Each lvl gives tiny bonus chance to
lower material cost and increase output amount.
Currently i added Alchemy and Tinkering.
- Alchemy is used to create potions, both instant and buffs, to help you restore mana etc. It also contains special potions like one that teleports you to your bed.
- Tinkering is a profession used to create currencies. 

Start using them by creating Alchemy and Tinkering Stations.

Profession stations can only be used by 1 person each. You occupy it forever when you place it. This is because of the level system limitations.
As a bonus though, if you lose your profession levels (they are attached to your player data) you can recover them by opening the profession block because they are stored there too.
Of course the level is whatever lvl you were at the last time you used the station.

I think professions will be really cool because they work like villager trading, so no need to remember craft grid order of materials or use JEI. I'll just have to balance them correctly.
I also want to add some more interesting features to them, but don't have ideas currently.

updated to Release Build of forge 28.1.1 
updated curios build
renamed SINGLEPLAYER_MOB_SCALING  to SCALE_MOB_LEVEL_TO_NEAREST_PLAYER . Please update your configs
homing projectile now checks for alive entities only
removed hearthstone and attunement block. I feel all they added was confusion.
removed crafting recipes of currencies, they are now made by profession called Tinkering.
added recall potion to alchemy
removed some old potions, added many more new ones
fixed elemental focus stat